--- a/index.html
+++ b/index.html
@@ -35,30 +35,36 @@ header
 {
     position: relative;
     overflow: hidden;
-    background-color: lightsalmon;
+    height: 60%;
+    h3
+    {
+      background-color: #9fdb77;  
+    }
 }
 .carouselkari
 {
     width: 100%;
-    height: 80%;
+    height: 60%;
     position: relative;
 }
 .carouselimgs
 {
     display: flex;
     width: 100%;
+    height: 60%;
     animation: carouselmove 10s infinite;
 }
 .imgcontainer
 {
     /*一枚づつズーム表示*/
     width: 100%;
+    height: 60%;
     flex-shrink: 0;
 }
 .imgcontainer img
     {
         width: 100%;
-        height: 100%;
+        height: 60%;
         object-fit: cover;
     }
 
@@ -204,27 +210,28 @@ margin: 20px auto;
 </style>
 <body>
     <header>
-        <!--ここからCSS section1部(ヘッダー)-->
+        <div class="A">
+            <div class="align1">
+                 <img src="trademark.png" width="15%" height="15%">
+                 <h1>横茶横葉のサイト</h1> 
+            </div>
+       </div>
+<h3>Latest News! - 最新情報一覧</h3>
         <div class="caroucelkari">
 
             <div class="carouselimgs">
-            <div class="imgcontainer"><img src="1.png" alt="ヘッダーカールセル画像"></div>
-            <div class="imgcontainer"><img src="2.png" alt="ヘッダーカールセル画像"></div>
-            <div class="imgcontainer"><img src="3.png" alt="ヘッダーカールセル画像"></div> 
+            <div class="imgcontainer"><img src="1.png" alt="ヘッダーカールセル画像" height="60%"></div>
+            <div class="imgcontainer"><a href="https://yokochayokoha.github.io/anzu"><img src="anzu_banner.png" alt="ヘッダーカールセル画像" height="60%"></a></div>
+            <div class="imgcontainer"><img src="c181p.png" alt="ヘッダーカールセル画像" height="60%"></div> 
             </div>
-            
+            <h3><font color="#9fdb77">更新2024/8/31</font></h3>
         </div>
         <div class="timenow" id="Clockvalue"></div>
         <!--ここまでsection1-->
 </header>
 <!--ここからsection2-->
     <main>
-     <div class="A">
-        <div class="align1">
-             <img src="trademark.png" width="15%" height="15%">
-             <h1>横茶横葉のサイト</h1> 
-        </div>
-   </div>
+
    <!--ここまでsection2-->
    <!--ここからsection3-->
         <div class="B">
@@ -237,23 +244,24 @@ margin: 20px auto;
    </div>
 
         <div class="G">
-                        <h3>横茶横葉からのお知らせ 2024年7月版(初夏)</h3>
+                        <h3>横茶横葉からのお知らせ 2024年9月版(秋)</h3>
         <div class="caroucelkari2">
 
             <div class="carouselimgs">
 
             <div class="imgcontainer"><img src="bs0.png" alt="ヘッダーカールセル画像"></div>
-            <div class="imgcontainer"><a href="https://sites.google.com/view/coffeebr"><img src="bs1.png" alt="ヘッダーカールセル画像"></a></div>
-            <div class="imgcontainer"><a href="https://github.com/YokochaYokoha/Coffee_for_PC?tab=readme-ov-file#whats-new"><img src="bs2.png" alt="ヘッダーカールセル画像"></a></div>
+            <div class="imgcontainer"><img src="leftntc.png" alt="ヘッダーカールセル画像"></div>
+            <div class="imgcontainer"><a href="https://yokochayokoha.github.io/readme"><img src="chgntc.png" alt="ヘッダーカールセル画像"></a></div>
             </div>
         </div>
         </div>
             
 
 <div class="E">
-    <h3>横茶横葉の楽曲(最近は作っていません....)</h3>
+    <h3>横茶横葉の楽曲</h3>
     <p>"ドライブ" from 横茶横葉Instrumentals -試聴↓</p>
     <iframe src="https://www.youtube.com/embed/aHgNG2a1vjc?si=G7wEbMneRrnJK7RB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
     </div>
 
 <div class="F">
@@ -274,10 +282,10 @@ margin: 20px auto;
   <p>Cafeアプリストア</p>
   <a href="https://sites.google.com/view/yokocafe/"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(2).png?raw=true" alt="Cafeアプリストアへアクセス" width="50%"></a>
 <br>
-  <p>CoffeeSub+iOS用PWAアプリ</p> 
+  <p>CoffeeSub+PWAアプリ</p> 
   <a href="https://yokochayokoha.github.io/CoffeeSub"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(4).png?raw=true" alt="CoffeeSubを使用" width="50%"></a>
   <br>
-    <p>雑記帳</p> 
+    <p>雑記帳 廃止予定</p> 
   <a href="https://yokochayokoha.blogspot.com"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner7.png?raw=true" alt="移動" width="50%"></a>
   <br>
 <p>X(Twitter)--休止中。重要なお知らせのみです!</p>
