--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="横茶横葉(よこのは)のオフィシャルホームページです。お知らせや各種サービスへのリンクが書いてあります。">
     <title>横茶横葉のサイト</title>
     <!--Rev2!-Reorganize started date is 2024/7/3 -->
     <!--見てくれている方へ:手動でぱちぱちキーボードを打っただけなので中身は全然すごくないです...各所に日本語のコメントアウトが目立つサイトです。-->
