--- a/readme.html
+++ b/readme.html
@@ -64,6 +64,7 @@ NGなこと
 
 "著作権フリー"や"フリー素材"と明記されているものであったとしても、公序良俗に反するものの製作に使用することは許可しません。
 
+  再利用が許可されている場合でも、その成果物や派生作品そのものにおいて、明記がない限りは独占行為、横茶横葉のプログラムをそのまま、または改変して使用しているにもかかわらず全て自作したと主張すること、製作者またはその他ユーザー様の迷惑や自由を侵害する行為は許可しません。
 
 上記の利用規約に、該当する項目が存在しない場合は、下記から利用規約2をご覧ください。
   </pre>
