alicense.html の更新

--- a/alicense.html
+++ b/alicense.html
@@ -40,7 +40,7 @@
 
 
   <p><font color="green">©︎2023 横茶横葉 All Rights Reserved.</font></p>
-  <p>このページでは横茶横葉Aライセンスが提要されたCSS(CoffeeUI_CSS)を使用しています。</p>
+  <p>このページでは横茶横葉Aライセンスが適用されたCSS(CoffeeUI_CSS)を使用しています。</p>
   
   
   
