--- a/index.html
+++ b/index.html
@@ -150,14 +150,15 @@ carouselmove
         </div>
             
 
-<div class="E">
+<!--<div class="E">
     <h3>横茶横葉のBGM(がればんです)</h3>
     <p>"ドライブ" from 横茶横葉Instrumentals -試聴↓</p>
     <iframe src="https://www.youtube.com/embed/aHgNG2a1vjc?si=G7wEbMneRrnJK7RB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p>"練習" from 横茶横葉Instrumentals -試聴↓</p>
     <iframe src="https://www.youtube.com/embed/eHrS0vwFbbs" title="練習" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
-
+-->
+<!--
 <div class="F">
     <h3>YouTubeの動画(一部)</h3>
     <iframe src="https://www.youtube.com/embed/90J5GfshHzA" title="「あんずはあんずが食べたい!」 ミニゲーム紹介映像" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -165,22 +166,17 @@ carouselmove
     <iframe  src="https://www.youtube.com/embed/jQcipoGEiO4?si=ysZVwCzojZANMfxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <iframe src="https://www.youtube.com/embed/Ps2ftSw4WMc?si=5ZYIyAhsMh411hi5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
-        
+        -->
         <div class="C">
 <h3>各種サービス一覧</h3>
 <br>
-  <p>YouTubeチャンネル</p>
-  <a href="https://www.youtube.com/@yokocha.yokoha"><img src="./ytch.png" alt="バナー画像" width="50%"></a>
-  <br>
+  
   <p>Cafeアプリストア</p>
   <a href="https://sites.google.com/view/yokocafe/"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(2).png?raw=true" alt="Cafeアプリストアへアクセス" width="50%"></a>
 <br>
   <p>CoffeeSub+PWAアプリ</p> 
   <a href="https://yokochayokoha.github.io/CoffeeSub"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(4).png?raw=true" alt="CoffeeSubを使用" width="50%"></a>
-  <br>
- <p>GitHub(新アカウント)</p>
-<a href="https://github.com/YokochaYokoha"><img src="./gh.png" alt="バナー画像" width="50%"></a>
-  <br>
+ 
         </div>
    <div class="D">
 <h3>期間限定コンテンツ</h3>
@@ -194,7 +190,6 @@ carouselmove
     <footer>
         &copy; 2023-2024 横茶横葉(YokochaYokoha),Mikan All Rights Reserved.
         <p>権利表記:YouTubeはGoogle LLCの商標または登録商標です。</p>
-        <p>背景画像提供:Mikan氏</p>
         <p>Rev.2.5 Made by YokochaYokoha!</p>
     </footer>
 </body>
