--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ carouselmove
             <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="ja" dir="ltr">Coffee18.1の配信を開始しました。<br>Coffee18.1 is now available.<br><br>SHA256:<br>3dd130332a771cbf34e02f72f7148d6f...<br><br>Official Link:<a href="https://t.co/ZlzxCQIUk5">https://t.co/ZlzxCQIUk5</a></p>&mdash; 横茶横葉 報連相 -Y.Yokoha Reports&amp;Contacts (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1821537551305621669?ref_src=twsrc%5Etfw">2024年8月8日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
    </div>
 
-        <div class="G">
+    <!--    <div class="G">
                         <h3>横茶横葉からのお知らせ 2024年9月版(秋)</h3>
         <div class="caroucelkari2">
 
@@ -149,7 +149,7 @@ carouselmove
         </div>
         </div>
             
-
+-->
 <!--<div class="E">
     <h3>横茶横葉のBGM(がればんです)</h3>
     <p>"ドライブ" from 横茶横葉Instrumentals -試聴↓</p>
