--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="横茶横葉(よこのは)のサイトです。お知らせやアプリ、ソフト、各種リンク、イラスト等、いろんなものを掲載中します! 最新情報:HTML5ゲーム「あんずはあんずが食べたい!」を公開しました。 簡素ではありますが、もしも、お時間があれば見ていってくださいね!">
+    <meta name="description" content="横茶横葉のサイトです。お知らせやアプリ、ソフト、各種リンク等、いろんなものを掲載中します! 最新情報:HTML5ゲーム「あんずはあんずが食べたい!」を公開しました。 簡素ではありますが、もしも、お時間があれば見ていってくださいね!">
     <title>横茶横葉のサイト</title>
     <link href="coffeeui.css" rel="stylesheet"/> 
 </head>
