--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ carouselmove
 </header>
 <!--ここからsection2-->
     <main>
-
+<h2>大切なお知らせ:Coffeeブラウザーの最重要アップデートを近日中に配信予定です。このアップデート発表後は旧バージョンが利用できなくなる場合があります。(インフォサーバーの廃止と移行によるものです。)　ご迷惑をおかけいたしますこと、お詫び申し上げます。</h2>
    <!--ここまでsection2-->
    <!--ここからsection3-->
         <div class="B">
