--- a/latestnewscoffee.html
+++ b/latestnewscoffee.html
@@ -12,7 +12,7 @@
       background:#89C3EBFF
     }
   </style>
-  <title>Coffee19を配信しました。Coffee18系またはそれ以下のバージョンをお使いの方は起動後すぐにアップデートをお願い致します。(インフォサーバーの閉鎖手続き中のため、アプリは1回のみ起動が可能となっています。2回目以降は手動でのダウンロードとなります。)ご迷惑をお掛けしますが、何卒ご協力をお願いいたします。</title>  <meta charset="UTF-8">
+  <title>Coffee19を配信しました。更新していただき、誠にありがとうございます!!情報サーバーは今後ほかのサーバーを使用します。 今回のバージョンアップは内部的な変更のほか、様々なWorkaroundsを詰め込んだものとなっています。機能の追加はあまりされていませんが正常動作に必要な変更を行いました。</title>  <meta charset="UTF-8">
 </head>
 <body>
 
