--- a/latestnewscoffee.html
+++ b/latestnewscoffee.html
@@ -12,7 +12,7 @@
       background:#89C3EBFF
     }
   </style>
-  <title>Coffee19を配信しました。更新していただき、誠にありがとうございます!!情報サーバーは今後ほかのサーバーを使用します。 今回のバージョンアップは内部的な変更のほか、様々なWorkaroundsを詰め込んだものとなっています。機能の追加はあまりされていませんが正常動作に必要な変更を行いました。</title>  <meta charset="UTF-8">
+  <title>Coffee19を配信しました。更新していただき、誠にありがとうございます!!情報サーバーは今後ほかのサーバーを使用します。 今回のバージョンアップは内部的な変更のほか、様々なWorkaroundsを詰め込んだものとなっています。機能の追加はあまりされていませんが正常動作に必要な変更を行いました。 追記:10/20~21 PM22:50までの間に更新された方へ 自動アップデート機能の動作しない誤ったバージョンを配布してしまったため、公式サイトの指示に従ってアプリの更新をお願いいたします。何度もお手数をおかけし、申し訳ございません。 その他の情報は"横茶横葉報連相Xアカウント"にて発信しています。@YokochaYokoha</title>  <meta charset="UTF-8">
 </head>
 <body>
 
